# OpenCLI

./: .gitignore  OPENCLAW.md  pyproject.toml  readme.md
opencli/: OPENCLI.md  TOOLS.md  input_handler.py  main copy.py  main.py
opencli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
